Закончена секция header

--- a/source/index.html
+++ b/source/index.html
@@ -6,17 +6,26 @@
   </head>
   <body class="page__body">
     <header class="page-header">
-      <a class="page-header__logo">
-        <img src="https://via.placeholder.com/150x150" alt="Логотип Седона">
-      </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
-            <li class="main-nav__item">Главная</li>
-            <li class="main-nav__item">Фото и видео</li>
-            <li class="main-nav__item">Форма отзыва</li>
-            <li class="main-nav__item">HtmlAcademy</li>
+            <li class="main-nav__item">
+              <a href="#">Главная</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="#">Фото и видео</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="#"><img src="https://via.placeholder.com/150x150" alt="Логотип Седона"></a>
+            </li>
+            <li class="main-nav__item">
+              <a href="#">Форма отзыва</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="#">HtmlAcademy</a>
+            </li>
+            <button class="main-nav__close"><span class="visually-hidden">Закрыть меню</span></button>
           </ul>
         </div>
       </nav>
