--- a/2/index.html
+++ b/2/index.html
@@ -8,25 +8,24 @@
   <body class="page__body">
     <header class="page-header">
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
-            <li class="main-nav__item">
+            <li class="site-list__item">
               <a href="#">Главная</a>
             </li>
-            <li class="main-nav__item">
+            <li class="site-list__item">
               <a href="#">Фото и видео</a>
             </li>
-            <li class="main-nav__item">
+            <li class="site-list__item">
               <a href="#"><img src="https://via.placeholder.com/150x150" alt="Логотип Седона"></a>
             </li>
-            <li class="main-nav__item">
+            <li class="site-list__item">
               <a href="#">Форма отзыва</a>
             </li>
-            <li class="main-nav__item">
+            <li class="site-list__item">
               <a href="#">HtmlAcademy</a>
             </li>
-            <button class="main-nav__close"><span class="visually-hidden">Закрыть меню</span></button>
           </ul>
         </div>
       </nav>
@@ -41,10 +40,10 @@
         <p class="description__text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       </section>
       <section class="town">
-        <div class="blue-card">
-          <h2 class="blue-card__title">Настоящий городок</h2>
-          <p class="blue-card__number">№1</p>
-          <p class="blue-card__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
+        <div class="color-card">
+          <h2 class="color-card__title">Настоящий городок</h2>
+          <p class="color-card__number">№1</p>
+          <p class="color-card__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
         </div>
         <img src="https://via.placeholder.com/150x150" alt="Фото города">
         <div class="town__housing">
@@ -61,10 +60,10 @@
         </div>
       </section>
       <section class="features">
-        <div class="blue-card">
-          <h2 class="blue-card__title">Там есть мост дьявола</h2>
-          <p class="blue-card__number">№2</p>
-          <p class="blue-card__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+        <div class="color-card">
+          <h2 class="color-card__title">Там есть мост дьявола</h2>
+          <p class="color-card__number">№2</p>
+          <p class="color-card__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
         </div>
         <img src="https://via.placeholder.com/150x150" alt="Фото каньона">
         <div class="features__block">
