Добавлен адрес для отправки данных формы

--- a/source/form.html
+++ b/source/form.html
@@ -40,7 +40,7 @@
     <main class="page-main">
       <section class="feedback">
         <div class="feedback__container">
-          <form class="form-feedback" action="#" method="POST">
+          <form class="form-feedback" action="https://echo.htmlacademy.ru" method="POST">
             <div class="form-feedback__representation">
               <h3 class="form-feedback__title">Представьтесь:</h3>
               <div class="form-feedback__basic-info">
