Исправление блока описания страницы

--- a/source/form.html
+++ b/source/form.html
@@ -28,18 +28,18 @@
           </ul>
         </div>
       </nav>
-      <div class="page-header__heading">
-        <h2 class="page-header__title">Оставьте свой отзыв</h2>
-        <p class="page-header__title-text">Помогите нашим отелям стать лучше!
-          Оставьте отзыв о них, а также о
-          посещенных вами
-          достопримечательностях
-        </p>
-      </div>
     </header>
     <main class="page-main">
       <section class="feedback">
         <div class="feedback__container">
+          <div class="description">
+            <h2 class="description__title">Оставьте свой отзыв</h2>
+            <p class="description__text">Помогите нашим отелям стать лучше!
+              Оставьте отзыв о них, а также о
+              посещенных вами
+              достопримечательностях
+            </p>
+          </div>
           <form class="form-feedback" action="https://echo.htmlacademy.ru" method="POST">
             <div class="form-feedback__representation">
               <h3 class="form-feedback__title">Представьтесь:</h3>
