Разметка страницы формы

--- a/source/index.html
+++ b/source/index.html
@@ -85,7 +85,7 @@
         <div class="interesting__container">
           <h2 class="interesting__title">Заинтересовались</h2>
           <p class="interesting__text">Укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <a class="interesting_search" href="#">Найти гостинницу</a>
+          <a class="interesting__search" href="#">Найти гостинницу</a>
         </div>
         <img src="https://via.placeholder.com/150x150" alt="Изображение карты">
       </section>
