Исправление альтернативной подписи к картинкам

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -40,13 +40,13 @@
           </p>
         </div>
         <div class="media__photo">
-          <img class="media__img" src="https://via.placeholder.com/150x150" alt="Дорога в Седону">
+          <img class="media__img" src="https://via.placeholder.com/150x150" alt="Народные просторы">
           <h3 class="media__title">Народные просторы</h3>
           <p class="media__figcaption">Автор фото: Борис</p>
           <span class="media__likes">1350</span>
         </div>
         <div class="media__photo">
-          <img class="media__img" src="https://via.placeholder.com/150x150" alt="Кактусы">
+          <img class="media__img" src="https://via.placeholder.com/150x150" alt="Местная растительность">
           <h3 class="media__title">Местная растительность</h3>
           <p class="media__figcaption">Автор фото: Сергей</p>
           <span class="media__likes">143</span>
