--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,7 @@
               <a href="#">Фото и видео</a>
             </li>
             <li class="site-list__item">
-              <a href="#"><img src="https://via.placeholder.com/150x150" alt="Логотип Седона"></a>
+              <a href="#"><img src="img/menu/logotype-mobile.svg" alt="Логотип Седона"></a>
             </li>
             <li class="site-list__item">
               <a href="#">Форма отзыва</a>
@@ -35,7 +35,6 @@
     <main class="page-main">
       <section class="intro">
         <h1 class="visually-hidden">СЕДОНА</h1>
-        <img class="intro__background" src="https://via.placeholder.com/150x150" alt="Фоновое изображение секции Седона">
       </section>
       <section class="description">
         <h2 class="description__title">СЕДОНА — небольшой  городок в АРИЗОНЕ,  заслуживающий большего!</h2>
@@ -47,7 +46,7 @@
           <p class="color-card__number">№1</p>
           <p class="color-card__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
         </div>
-        <img src="https://via.placeholder.com/150x150" alt="Фото города">
+        <img src="img/main/city.jpg" width="320" height="260" alt="Фото города">
         <div class="town__housing">
           <h3 class="town__title">Жилье</h3>
           <p class="town__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
@@ -67,7 +66,7 @@
           <p class="color-card__number">№2</p>
           <p class="color-card__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
         </div>
-        <img src="https://via.placeholder.com/150x150" alt="Фото каньона">
+        <img src="img/main/bridge.png" width="320" height="260" alt="Фото каньона">
         <div class="features__block">
           <h2 class="features__title">Небольшая площадь</h2>
           <p class="features__number">№3</p>
@@ -90,7 +89,7 @@
           <p class="interesting__text">Укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <a class="interesting__search" href="#">Найти гостинницу</a>
         </div>
-        <img src="https://via.placeholder.com/150x150" alt="Изображение карты">
+        <img src="img/main/map-mobile.jpg" alt="Изображение карты">
       </section>
     </main>
     <footer class="page-footer">
