Верстка мобильного меню с изменением состояния кнопок

--- a/source/index.html
+++ b/source/index.html
@@ -8,24 +8,24 @@
   <body class="page__body">
     <header class="page-header">
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a href="#">Главная</a>
+              <a class="site-list__link list-size--a" href="#"><span>Главная</span></a>
             </li>
             <li class="site-list__item">
-              <a href="#">Фото и видео</a>
+              <a class="site-list__link list-size--b" href="#"><span>Фото и видео</span></a>
             </li>
             <li class="site-list__item">
-              <a href="#"><img src="img/menu/logotype-mobile.svg" alt="Логотип Седона"></a>
+              <a class="site-list__link list-size--c" href="#"><span>Форма отзыва</span></a>
             </li>
             <li class="site-list__item">
-              <a href="#">Форма отзыва</a>
+              <a class="site-list__link list-size--d" href="#"><span>Html Academy</span></a>
             </li>
-            <li class="site-list__item">
-              <a href="#">HtmlAcademy</a>
+            <li class="site-list__item item-logo">
+              <a class="site-list__link-logo" href="#"><img src="img/menu/logotype-mobile.svg" alt="Логотип Седона"></a>
             </li>
+            <button class="main-nav__toggle visually-hidden" type="button"><span>Меню</span></button>
           </ul>
         </div>
       </nav>
