:heavy_check_mark: Сборка #5

--- a/5/catalog.html
+++ b/5/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="css/style.css">
     <base href="https://htmlacademy-adaptive.github.io/813413-sedona-21/5/">
 </head>
   <body class="page__body">
