--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
               <a class="site-list__link link-size--b" href="#"><span>Фото и видео</span></a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link link-size--c" href="#"><span>Форма отзыва</span></a>
+              <a class="site-list__link link-size--c" href="form.html"><span>Форма отзыва</span></a>
             </li>
             <li class="site-list__item">
               <a class="site-list__link link-size--d" href="#"><span>Html Academy</span></a>
