--- a/source/form.html
+++ b/source/form.html
@@ -84,20 +84,23 @@
               <h3 class="form-feedback__title">Ваше общее впечатление:</h3>
               <ul class="form-feedback__impression-list">
                 <li class="form-feedback__impression-item">
-                  <label for="check-positive">
-                    <input type="radio" name="opinion" value="positive" id="check-positive">
+                  <label class="form-feedback__check" for="check-positive">
+                    <input class="form-feedback__check-input" type="radio" name="opinion" value="positive" id="check-positive">
+                    <span class="form-feedback__check-box"></span>
                     Скорее положительное</label>
-                  </li>
+                </li>
                 <li class="form-feedback__impression-item">
-                  <label for="check-negative">
-                    <input type="radio" name="opinion" value="negative" id="check-negative">
+                  <label class="form-feedback__check" for="check-negative">
+                    <input class="form-feedback__check-input" type="radio" name="opinion" value="negative" id="check-negative">
+                    <span class="form-feedback__check-box"></span>
                     Скорее отрицательное</label>
-                  </li>
+                </li>
                 <li class="form-feedback__impression-item">
-                  <label for="check-hard">
-                    <input type="radio" name="opinion" value="hard" id="check-hard">
+                  <label class="form-feedback__check" for="check-hard">
+                    <input class="form-feedback__check-input" type="radio" name="opinion" value="hard" id="check-hard">
+                    <span class="form-feedback__check-box"></span>
                     Затрудняюсь ответить</label>
-                  </li>
+                </li>
               </ul>
             </div>
             <div class="form-feedback__attractions">
