Завершена стилизация блока общее впечатление

--- a/source/form.html
+++ b/source/form.html
@@ -85,7 +85,7 @@
               <ul class="form-feedback__impression-list">
                 <li class="form-feedback__impression-item">
                   <label class="form-feedback__check" for="check-positive">
-                    <input class="form-feedback__check-input" type="radio" name="opinion" value="positive" id="check-positive">
+                    <input class="form-feedback__check-input" type="radio" name="opinion" value="positive" id="check-positive" checked>
                     <span class="form-feedback__check-box"></span>
                     Скорее положительное</label>
                 </li>
