Завершена стилизация чекбоксов блока достопримечательности

--- a/source/form.html
+++ b/source/form.html
@@ -85,19 +85,19 @@
               <ul class="form-feedback__impression-list">
                 <li class="form-feedback__impression-item">
                   <label class="form-feedback__check" for="check-positive">
-                    <input class="form-feedback__check-input" type="radio" name="opinion" value="positive" id="check-positive" checked>
+                    <input class="form-feedback__check-input" type="radio" name="opinion" value="positive" id="check-positive" checked tabindex="0">
                     <span class="form-feedback__check-box"></span>
                     Скорее положительное</label>
                 </li>
                 <li class="form-feedback__impression-item">
                   <label class="form-feedback__check" for="check-negative">
-                    <input class="form-feedback__check-input" type="radio" name="opinion" value="negative" id="check-negative">
+                    <input class="form-feedback__check-input" type="radio" name="opinion" value="negative" id="check-negative" tabindex="0">
                     <span class="form-feedback__check-box"></span>
                     Скорее отрицательное</label>
                 </li>
                 <li class="form-feedback__impression-item">
                   <label class="form-feedback__check" for="check-hard">
-                    <input class="form-feedback__check-input" type="radio" name="opinion" value="hard" id="check-hard">
+                    <input class="form-feedback__check-input" type="radio" name="opinion" value="hard" id="check-hard" tabindex="0">
                     <span class="form-feedback__check-box"></span>
                     Затрудняюсь ответить</label>
                 </li>
@@ -107,16 +107,28 @@
               <h3 class="form-feedback__title">Посещаемые достопримечательности:</h3>
               <ul class="form-feedback__attractions-list">
                 <li class="form-feedback__attractions-item">
-                  <label for="bridge"><input type="checkbox" name="bridge-devil" id="bridge">Мост Дьявола</label>
+                  <label class="from-feedback__attractions-check" for="bridge">
+                    <input class="form-feedback__attractions-check-input" type="checkbox" name="bridge-devil" id="bridge" checked tabindex="0">
+                    <span class="form-feedback__attractions-check-box"></span>
+                    Мост Дьявола</label>
                 </li>
                 <li class="form-feedback__attractions-item">
-                  <label for="bell"><input type="checkbox" name="bell-rock" id="bell">Гора-Колокол</label>
+                  <label class="from-feedback__attractions-check" for="bell">
+                    <input class="form-feedback__attractions-check-input" type="checkbox" name="bell-rock" id="bell" checked tabindex="0">
+                    <span class="form-feedback__attractions-check-box"></span>
+                    Гора-Колокол</label>
                 </li>
                 <li class="form-feedback__attractions-item">
-                  <label for="park"><input type="checkbox" name="slide-park" id="park">Слайд-парк</label>
+                  <label class="from-feedback__attractions-check" for="park">
+                    <input class="form-feedback__attractions-check-input" type="checkbox" name="slide-park" id="park" checked tabindex="0">
+                    <span class="form-feedback__attractions-check-box"></span>
+                    Слайд-парк</label>
                 </li>
                 <li class="form-feedback__attractions-item">
-                  <label for="redrock"><input type="checkbox" name="red-rock" id="redrock">Красные скалы</label>
+                  <label class="from-feedback__attractions-check" for="redrock">
+                    <input class="form-feedback__attractions-check-input" type="checkbox" name="red-rock" id="redrock" tabindex="0">
+                    <span class="form-feedback__attractions-check-box"></span>
+                    Красные скалы</label>
                 </li>
               </ul>
             </div>
