Базовая стилизация формы

--- a/source/form.html
+++ b/source/form.html
@@ -134,7 +134,9 @@
             </div>
             <div class="form-feedback__description">
               <h3 class="form-feedback__title">Опишите свои эмоции:</h3>
-              <textarea name="text" cols="30" rows="10" placeholder="Опишите подробно все свои восторги"></textarea>
+              <div class="form-feedback__description-container">
+                <textarea class="form-feedback__description-text" name="text" cols="30" rows="10" placeholder="Опишите подробно все свои восторги"></textarea>
+              </div>
             </div>
             <button class="feedback__button" type="submit">Оставить отзыв</button>
           </form>
