Базовая стилизация каталога

--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
               <a class="site-list__link link-size--a" href="#"><span>Главная</span></a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link link-size--b" href="#"><span>Фото и видео</span></a>
+              <a class="site-list__link link-size--b" href="catalog.html"><span>Фото и видео</span></a>
             </li>
             <li class="site-list__item">
               <a class="site-list__link link-size--c" href="form.html"><span>Форма отзыва</span></a>
