--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,70 +8,83 @@
   <body class="page__body">
     <header class="page-header">
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a href="#">Главная</a>
+              <a class="site-list__link link-size--a" href="#"><span>Главная</span></a>
             </li>
             <li class="site-list__item">
-              <a href="#">Фото и видео</a>
+              <a class="site-list__link link-size--b" href="catalog.html"><span>Фото и видео</span></a>
             </li>
             <li class="site-list__item">
-              <a href="#"><img src="https://via.placeholder.com/150x150" alt="Логотип Седона"></a>
+              <a class="site-list__link link-size--c" href="form.html"><span>Форма отзыва</span></a>
             </li>
             <li class="site-list__item">
-              <a href="#">Форма отзыва</a>
+              <a class="site-list__link link-size--d" href="#"><span>Html Academy</span></a>
             </li>
-            <li class="site-list__item">
-              <a href="#">HtmlAcademy</a>
+            <li class="site-list__item item-logo">
+              <a class="site-list__link-logo" href="#"></a>
             </li>
+            <button class="main-nav__toggle" type="button"><span class="visually-hidden">Меню</span></button>
           </ul>
         </div>
       </nav>
     </header>
     <main class="page-main">
+      <section class="intro intro-form">
+        <div class="intro__title intro-form__title">
+          <h1 class="visually-hidden">СЕДОНА</h1>
+        </div>
+      </section>
       <section class="media">
         <div class="description">
           <h2 class="description__title">Фото и видео</h2>
           <p class="description__text">
-            Не можете решиться на путишествие
-            из-за курса? Фотографии помогут вам
+            Не можете решиться на путишествие<br>
+            из-за курса? Фотографии помогут вам<br>
             забыть о политике и экономике.
           </p>
         </div>
         <div class="media__photo">
-          <img class="media__img" src="https://via.placeholder.com/150x150" alt="Народные просторы">
-          <h3 class="media__title">Народные просторы</h3>
-          <p class="media__figcaption">Автор фото: Борис</p>
-          <span class="media__likes">1350</span>
+          <div class="media__inner-container">
+            <img class="media__img" src="img/catalog/photo-1-mobile-catalog.jpg" width="280" height="280" alt="Народные просторы">
+            <h3 class="media__title">Народные просторы</h3>
+            <p class="media__figcaption">Автор фото: Борис</p>
+            <span class="media__likes">1350</span>
+          </div>
         </div>
         <div class="media__photo">
-          <img class="media__img" src="https://via.placeholder.com/150x150" alt="Местная растительность">
-          <h3 class="media__title">Местная растительность</h3>
-          <p class="media__figcaption">Автор фото: Сергей</p>
-          <span class="media__likes">143</span>
+          <div class="media__inner-container">
+            <img class="media__img" src="img/catalog/photo-2-mobile-catalog.jpg" width="280" height="280" alt="Местная растительность">
+            <h3 class="media__title">Местная растительность</h3>
+            <p class="media__figcaption">Автор фото: Сергей</p>
+            <span class="media__likes">143</span>
+          </div>
         </div>
         <div class="media__photo">
-          <img class="media__img" src="https://via.placeholder.com/150x150" alt="Дорога на север">
-          <h3 class="media__title">Дорога на север</h3>
-          <p class="media__figcaption">Автор фото: Петр</p>
-          <span class="media__likes">96</span>
+          <div class="media__inner-container">
+            <img class="media__img" src="img/catalog/photo-3-mobile-catalog.jpg" width="280" height="280" alt="Дорога на север">
+            <h3 class="media__title">Дорога на север</h3>
+            <p class="media__figcaption">Автор фото: Петр</p>
+            <span class="media__likes">96</span>
+          </div>
         </div>
         <div class="media__photo">
-          <img class="media__img" src="https://via.placeholder.com/150x150" alt="Мост дьявола">
-          <h3 class="media__title">Мост дьявола</h3>
-          <p class="media__figcaption">Автор фото: Антон</p>
-          <span class="media__likes">1350</span>
+          <div class="media__inner-container">
+            <img class="media__img" src="img/catalog/photo-4-mobile-catalog.jpg" width="280" height="280" alt="Мост дьявола">
+            <h3 class="media__title">Мост дьявола</h3>
+            <p class="media__figcaption">Автор фото: Антон</p>
+            <span class="media__likes">1350</span>
+          </div>
         </div>
         <div class="media__video">
           <h3 class="media__video-title">Вы еще сомневаетесь?</h3>
           <p class="media__video-text">
-            Смотрите видеопрезентацию и
-            скорее за билетами, пока они не
+            Смотрите видеопрезентацию и<br>
+            скорее за билетами, пока они не<br>
             подорожали в очередной раз!
           </p>
-          <video class="media__video-icon" width="400" height="300" controls="controls" poster="https://via.placeholder.com/150x150">
+          <video class="media__video-icon" width="320" height="201" controls="controls" poster="img/catalog/video-mobile.jpg">
             <source src="#">
           </video>
         </div>
