:heavy_check_mark: Сборка #7

--- a/7/form.html
+++ b/7/form.html
@@ -10,21 +10,21 @@
     <header class="page-header">
       <nav class="main-nav">
         <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item">
-              <a class="site-list__link link-size--a" href="index.html"><span>Главная</span></a>
+          <ul class="main-nav__list">
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--size-a" href="index.html"><span>Главная</span></a>
             </li>
-            <li class="site-list__item">
-              <a class="site-list__link link-size--b" href="#"><span>Фото и видео</span></a>
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--size-b" href="catalog.html"><span>Фото и видео</span></a>
             </li>
-            <li class="site-list__item">
-              <a class="site-list__link link-size--c" href="form.html"><span>Форма отзыва</span></a>
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--size-c" href="form.html"><span>Форма отзыва</span></a>
             </li>
-            <li class="site-list__item">
-              <a class="site-list__link link-size--d" href="#"><span>Html Academy</span></a>
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--size-d" href="https://htmlacademy.ru/"><span>Html Academy</span></a>
             </li>
-            <li class="site-list__item item-logo">
-              <a class="site-list__link-logo" href="#"></a>
+            <li class="main-nav__item main-nav__item--logo">
+              <a class="main-nav__link-logo" href="#"></a>
             </li>
             <button class="main-nav__toggle" type="button"><span class="visually-hidden">Меню</span></button>
           </ul>
@@ -32,8 +32,8 @@
       </nav>
     </header>
     <main class="page-main">
-      <section class="intro intro-form">
-        <div class="intro__title intro-form__title">
+      <section class="intro-form">
+        <div class="intro-form__title">
           <h1 class="visually-hidden">СЕДОНА</h1>
         </div>
       </section>
@@ -139,7 +139,7 @@
                 <textarea class="form-feedback__description-text" name="text" cols="30" rows="10" placeholder="Опишите подробно все свои восторги"></textarea>
               </div>
             </div>
-            <button class="feedback__button" type="submit">Оставить отзыв</button>
+            <button class="form-feedback__button" type="submit">Оставить отзыв</button>
           </form>
         </div>
       </section>
