--- a/source/form.html
+++ b/source/form.html
@@ -2,157 +2,160 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
-    <header class="page-header">
-      <nav class="main-nav">
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list">
-            <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--size-a" href="index.html"><span>Главная</span></a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--size-b" href="catalog.html"><span>Фото и видео</span></a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--size-c" href="form.html"><span>Форма отзыва</span></a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--size-d" href="https://htmlacademy.ru/"><span>Html Academy</span></a>
-            </li>
-            <li class="main-nav__item main-nav__item--logo">
-              <a class="main-nav__link-logo" href="#"></a>
-            </li>
-            <button class="main-nav__toggle" type="button"><span class="visually-hidden">Меню</span></button>
-          </ul>
-        </div>
-      </nav>
-    </header>
-    <main class="page-main">
-      <section class="intro-form">
-        <div class="intro-form__title">
-          <h1 class="visually-hidden">СЕДОНА</h1>
-        </div>
-      </section>
-      <section class="feedback">
-        <div class="feedback__container">
-          <div class="description">
-            <h2 class="description__title">Оставьте свой отзыв</h2>
-            <p class="description__text">Помогите нашим отелям стать лучше!
-              Оставьте отзыв о них, а также о
-              посещенных вами
-              достопримечательностях
-            </p>
+    <div class="page__container">
+      <header class="page-header">
+        <nav class="main-nav">
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list">
+              <li class="main-nav__item">
+                <a class="main-nav__link main-nav__link--size-a" href="index.html"><span>Главная</span></a>
+              </li>
+              <li class="main-nav__item">
+                <a class="main-nav__link main-nav__link--size-b" href="catalog.html"><span>Фото и видео</span></a>
+              </li>
+              <li class="main-nav__item">
+                <a class="main-nav__link main-nav__link--size-c" href="form.html"><span>Форма отзыва</span></a>
+              </li>
+              <li class="main-nav__item">
+                <a class="main-nav__link main-nav__link--size-d" href="https://htmlacademy.ru/"><span>Html Academy</span></a>
+              </li>
+              <li class="main-nav__item main-nav__item--logo">
+                <a class="main-nav__link-logo" href="#"></a>
+              </li>
+              <button class="main-nav__toggle" type="button"><span class="visually-hidden">Меню</span></button>
+            </ul>
           </div>
-          <form class="form-feedback" action="https://echo.htmlacademy.ru" method="POST">
-            <div class="form-feedback__representation">
-              <h3 class="form-feedback__title">Представьтесь:</h3>
-              <div class="form-feedback__basic-info">
-                <label for="name">Имя*:
-                  <input class="form-feedback__first-area" type="text" name="name" id="name" placeholder="Петр">
-                </label>
-              </div>
-              <div class="form-feedback__basic-info">
-                <label for="surname">Фамилия*:
-                  <input class="form-feedback__second-area" type="text" name="name" id="surname" placeholder="Иванов">
-                </label>
-              </div>
-              <div class="form-feedback__basic-info">
-                <label for="patronymic">Отчество:
-                  <input class="form-feedback__third-area" type="text" name="name" id="patronymic" placeholder="Александрович">
-                </label>
-              </div>
+        </nav>
+      </header>
+      <main class="page-main">
+        <section class="intro-form">
+          <div class="intro-form__title">
+            <h1 class="visually-hidden">СЕДОНА</h1>
+          </div>
+        </section>
+        <section class="feedback">
+          <div class="feedback__container">
+            <div class="description">
+              <h2 class="description__title">Оставьте свой отзыв</h2>
+              <p class="description__text">Помогите нашим отелям стать лучше!
+                Оставьте отзыв о них, а также о
+                посещенных вами
+                достопримечательностях
+              </p>
             </div>
-            <div class="form-feedback__connection">
-              <h3 class="form-feedback__title">Контактная информация:</h3>
-              <div class="form-feedback__data-info">
-                <label for="phone">Контактный телефон:
-                  <input type="tel" name="tel" id="phone" placeholder="Введите телефон">
-                  <div class="form-feedback__decoration-phone-container"></div>
-                </label>
+            <form class="form-feedback" action="https://echo.htmlacademy.ru" method="POST">
+              <div class="form-feedback__representation">
+                <h3 class="form-feedback__title">Представьтесь:</h3>
+                <div class="form-feedback__basic-info">
+                  <label for="name">Имя*:
+                    <input class="form-feedback__first-area" type="text" name="name" id="name" placeholder="Петр">
+                  </label>
+                </div>
+                <div class="form-feedback__basic-info">
+                  <label for="surname">Фамилия*:
+                    <input class="form-feedback__second-area" type="text" name="name" id="surname" placeholder="Иванов">
+                  </label>
+                </div>
+                <div class="form-feedback__basic-info">
+                  <label for="patronymic">Отчество:
+                    <input class="form-feedback__third-area" type="text" name="name" id="patronymic" placeholder="Александрович">
+                  </label>
+                </div>
               </div>
-              <div class="form-feedback__data-info">
-                <label for="mail">Электронная почта:
-                  <input type="email" name="email" id="mail" placeholder="Введите e-mail">
-                </label>
-                <div class="form-feedback__decoration-mail-container"></div>
+              <div class="form-feedback__connection">
+                <h3 class="form-feedback__title">Контактная информация:</h3>
+                <div class="form-feedback__data-info">
+                  <label for="phone">Контактный телефон:
+                    <input type="tel" name="tel" id="phone" placeholder="Введите телефон">
+                    <div class="form-feedback__decoration-phone-container"></div>
+                  </label>
+                </div>
+                <div class="form-feedback__data-info">
+                  <label for="mail">Электронная почта:
+                    <input type="email" name="email" id="mail" placeholder="Введите e-mail">
+                  </label>
+                  <div class="form-feedback__decoration-mail-container"></div>
+                </div>
               </div>
-            </div>
-            <div class="form-feedback__impression">
-              <h3 class="form-feedback__title">Ваше общее впечатление:</h3>
-              <ul class="form-feedback__impression-list">
-                <li class="form-feedback__impression-item">
-                  <label class="form-feedback__check" for="check-positive">
-                    <input class="form-feedback__check-input" type="radio" name="opinion" value="positive" id="check-positive" checked tabindex="0">
-                    <span class="form-feedback__check-box"></span>
-                    Скорее положительное</label>
-                </li>
-                <li class="form-feedback__impression-item">
-                  <label class="form-feedback__check" for="check-negative">
-                    <input class="form-feedback__check-input" type="radio" name="opinion" value="negative" id="check-negative" tabindex="0">
-                    <span class="form-feedback__check-box"></span>
-                    Скорее отрицательное</label>
-                </li>
-                <li class="form-feedback__impression-item">
-                  <label class="form-feedback__check" for="check-hard">
-                    <input class="form-feedback__check-input" type="radio" name="opinion" value="hard" id="check-hard" tabindex="0">
-                    <span class="form-feedback__check-box"></span>
-                    Затрудняюсь ответить</label>
-                </li>
-              </ul>
-            </div>
-            <div class="form-feedback__attractions">
-              <h3 class="form-feedback__title">Посещаемые достопримечательности:</h3>
-              <ul class="form-feedback__attractions-list">
-                <li class="form-feedback__attractions-item">
-                  <label class="from-feedback__attractions-check" for="bridge">
-                    <input class="form-feedback__attractions-check-input" type="checkbox" name="bridge-devil" id="bridge" checked tabindex="0">
-                    <span class="form-feedback__attractions-check-box"></span>
-                    Мост Дьявола</label>
-                </li>
-                <li class="form-feedback__attractions-item">
-                  <label class="from-feedback__attractions-check" for="bell">
-                    <input class="form-feedback__attractions-check-input" type="checkbox" name="bell-rock" id="bell" checked tabindex="0">
-                    <span class="form-feedback__attractions-check-box"></span>
-                    Гора-Колокол</label>
-                </li>
-                <li class="form-feedback__attractions-item">
-                  <label class="from-feedback__attractions-check" for="park">
-                    <input class="form-feedback__attractions-check-input" type="checkbox" name="slide-park" id="park" checked tabindex="0">
-                    <span class="form-feedback__attractions-check-box"></span>
-                    Слайд-парк</label>
-                </li>
-                <li class="form-feedback__attractions-item">
-                  <label class="from-feedback__attractions-check" for="redrock">
-                    <input class="form-feedback__attractions-check-input" type="checkbox" name="red-rock" id="redrock" tabindex="0">
-                    <span class="form-feedback__attractions-check-box"></span>
-                    Красные скалы</label>
-                </li>
-              </ul>
-            </div>
-            <div class="form-feedback__description">
-              <h3 class="form-feedback__title">Опишите свои эмоции:</h3>
-              <div class="form-feedback__description-container">
-                <textarea class="form-feedback__description-text" name="text" cols="30" rows="10" placeholder="Опишите подробно все свои восторги"></textarea>
+              <div class="form-feedback__impression">
+                <h3 class="form-feedback__title">Ваше общее впечатление:</h3>
+                <ul class="form-feedback__impression-list">
+                  <li class="form-feedback__impression-item">
+                    <label class="form-feedback__check" for="check-positive">
+                      <input class="form-feedback__check-input" type="radio" name="opinion" value="positive" id="check-positive" checked tabindex="0">
+                      <span class="form-feedback__check-box"></span>
+                      Скорее положительное</label>
+                  </li>
+                  <li class="form-feedback__impression-item">
+                    <label class="form-feedback__check" for="check-negative">
+                      <input class="form-feedback__check-input" type="radio" name="opinion" value="negative" id="check-negative" tabindex="0">
+                      <span class="form-feedback__check-box"></span>
+                      Скорее отрицательное</label>
+                  </li>
+                  <li class="form-feedback__impression-item">
+                    <label class="form-feedback__check" for="check-hard">
+                      <input class="form-feedback__check-input" type="radio" name="opinion" value="hard" id="check-hard" tabindex="0">
+                      <span class="form-feedback__check-box"></span>
+                      Затрудняюсь ответить</label>
+                  </li>
+                </ul>
               </div>
-            </div>
-            <button class="form-feedback__button" type="submit">Оставить отзыв</button>
-          </form>
-        </div>
-      </section>
-    </main>
-    <footer class="page-footer">
-      <section class="social">
-        <h2 class="social__title">#visitsedona</h2>
-        <div class="social__links">
-          <a class="social__item" href="#"><span class="visually-hidden">twitter</span></a>
-          <a class="social__item" href="#"><span class="visually-hidden">facebook</span></a>
-          <a class="social__item" href="#"><span class="visually-hidden">youtube</span></a>
-        </div>
-        <a class="social__dev" href="#">Разработано</a>
-      </section>
-    </footer>
+              <div class="form-feedback__attractions">
+                <h3 class="form-feedback__title">Посещаемые достопримечательности:</h3>
+                <ul class="form-feedback__attractions-list">
+                  <li class="form-feedback__attractions-item">
+                    <label class="from-feedback__attractions-check" for="bridge">
+                      <input class="form-feedback__attractions-check-input" type="checkbox" name="bridge-devil" id="bridge" checked tabindex="0">
+                      <span class="form-feedback__attractions-check-box"></span>
+                      Мост Дьявола</label>
+                  </li>
+                  <li class="form-feedback__attractions-item">
+                    <label class="from-feedback__attractions-check" for="bell">
+                      <input class="form-feedback__attractions-check-input" type="checkbox" name="bell-rock" id="bell" checked tabindex="0">
+                      <span class="form-feedback__attractions-check-box"></span>
+                      Гора-Колокол</label>
+                  </li>
+                  <li class="form-feedback__attractions-item">
+                    <label class="from-feedback__attractions-check" for="park">
+                      <input class="form-feedback__attractions-check-input" type="checkbox" name="slide-park" id="park" checked tabindex="0">
+                      <span class="form-feedback__attractions-check-box"></span>
+                      Слайд-парк</label>
+                  </li>
+                  <li class="form-feedback__attractions-item">
+                    <label class="from-feedback__attractions-check" for="redrock">
+                      <input class="form-feedback__attractions-check-input" type="checkbox" name="red-rock" id="redrock" tabindex="0">
+                      <span class="form-feedback__attractions-check-box"></span>
+                      Красные скалы</label>
+                  </li>
+                </ul>
+              </div>
+              <div class="form-feedback__description">
+                <h3 class="form-feedback__title">Опишите свои эмоции:</h3>
+                <div class="form-feedback__description-container">
+                  <textarea class="form-feedback__description-text" name="text" cols="30" rows="10" placeholder="Опишите подробно все свои восторги"></textarea>
+                </div>
+              </div>
+              <button class="form-feedback__button" type="submit">Оставить отзыв</button>
+            </form>
+          </div>
+        </section>
+      </main>
+      <footer class="page-footer">
+        <section class="social">
+          <h2 class="social__title">#visitsedona</h2>
+          <div class="social__links">
+            <a class="social__item" href="#"><span class="visually-hidden">twitter</span></a>
+            <a class="social__item" href="#"><span class="visually-hidden">facebook</span></a>
+            <a class="social__item" href="#"><span class="visually-hidden">youtube</span></a>
+          </div>
+          <a class="social__dev" href="#">Разработано</a>
+        </section>
+      </footer>
+    </div>
   </body>
 </html>
