Стилизация блока Описание главной страницы -планшет

--- a/source/index.html
+++ b/source/index.html
@@ -38,10 +38,10 @@
         </div>
       </section>
       <section class="description">
-        <h2 class="description__title">СЕДОНА — небольшой<br>
-          городок в АРИЗОНЕ,<br>
+        <h2 class="description__title">СЕДОНА — небольшой
+          городок в АРИЗОНЕ,
           заслуживающий большего!</h2>
-        <p class="description__text">Рассмотрим 5 причин, по которым<br>
+        <p class="description__text">Рассмотрим 5 причин, по которым
           Седона круче, чем гранд каньон!</p>
       </section>
       <section class="town">
