Адаптивная сетка для секции Город - планшет

--- a/source/index.html
+++ b/source/index.html
@@ -50,22 +50,24 @@
           <p class="color-card__number">—№1—</p>
           <p class="color-card__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
         </div>
-        <img src="img/main/city.jpg" width="320" height="260" alt="Фото города">
-        <div class="town__housing">
-          <h3 class="town__title">Жилье</h3>
-          <p class="town__text">Рекомендуем пожить в<br>
-            настоящем мотеле, все как в кино!</p>
-        </div>
-        <div class="town__souvenirs">
-          <h3 class="town__title">Сувениры</h3>
-          <p class="town__text">Не только китайского, но и<br>
-          метсного производства!</p>
-        </div>
-        <div class="town__food">
-          <h3 class="town__title">Еда</h3>
-          <p class="town__text">Всегда заказывайте<br>
-          бургер, вы не<br>
-          разочаруетесь!</p>
+        <img class="town__img" src="img/main/city.jpg" width="320" height="260" alt="Фото города">
+        <div class="town__container">
+          <div class="town__housing">
+            <h3 class="town__title">Жилье</h3>
+            <p class="town__text">Рекомендуем пожить в
+              настоящем мотеле, все как в кино!</p>
+          </div>
+          <div class="town__souvenirs">
+            <h3 class="town__title">Сувениры</h3>
+            <p class="town__text">Не только китайского, но и
+            метсного производства!</p>
+          </div>
+          <div class="town__food">
+            <h3 class="town__title">Еда</h3>
+            <p class="town__text">Всегда заказывайте
+            фирменный бургер, вы не
+            разочаруетесь!</p>
+          </div>
         </div>
       </section>
       <section class="features">
