Стилизация + сетка секции features - планшет

--- a/source/index.html
+++ b/source/index.html
@@ -71,12 +71,14 @@
         </div>
       </section>
       <section class="features">
-        <div class="color-card">
+        <div class="color-card color-card--position">
           <h2 class="color-card__title">Там есть мост дьявола</h2>
           <p class="color-card__number">—№2—</p>
           <p class="color-card__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
         </div>
-        <img src="img/main/bridge.png" width="320" height="260" alt="Фото каньона">
+        <div class="features__container">
+          <img class="features__img" src="img/main/bridge.png" width="320" height="260" alt="Фото каньона">
+        </div>
         <div class="features__block">
           <h2 class="features__title">Небольшая площадь</h2>
           <p class="features__number">—№3—</p>
@@ -85,7 +87,7 @@
         <div class="features__block">
           <h2 class="features__title">Красивая дорога</h2>
           <p class="features__number">—№4—</p>
-          <p class="features__text">Еъать в Седону из Лас-Вегаса совсем не скучно!</p>
+          <p class="features__text features__text-width">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </div>
         <div class="features__block">
           <h2 class="features__title">Мало туристов</h2>
