Стилизация секции поиска

--- a/source/index.html
+++ b/source/index.html
@@ -98,8 +98,8 @@
       <section class="interesting">
         <div class="interesting__container">
           <h2 class="interesting__title">Заинтересовались?</h2>
-          <p class="interesting__text">Укажите предпологаемые даты<br>
-            поездки, и мы покажем вам лучшие<br>
+          <p class="interesting__text">Укажите предпологаемые даты
+            поездки, и мы покажем вам лучшие
             предложения гостиниц в Седоне</p>
           <a class="interesting__search" href="#">Найти гостиницу</a>
         </div>
