Сетка для главной страницы - планшет

--- a/source/index.html
+++ b/source/index.html
@@ -103,7 +103,9 @@
             предложения гостиниц в Седоне</p>
           <a class="interesting__search" href="#">Найти гостиницу</a>
         </div>
-        <img class="interesting__map" src="img/main/map-mobile.jpg" height="350" width="320" alt="Карта">
+        <div class="interesting__map-container">
+          <img class="interesting__map" src="img/main/map-mobile.jpg" height="350" width="320" alt="Карта">
+        </div>
       </section>
     </main>
     <footer class="page-footer">
