--- a/source/index.html
+++ b/source/index.html
@@ -50,7 +50,9 @@
           <p class="color-card__number">—№1—</p>
           <p class="color-card__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
         </div>
-        <img class="town__img" src="img/main/city.jpg" width="320" height="260" alt="Фото города">
+        <div class="town__img-container">
+          <img class="town__img" src="img/main/city.jpg" width="320" height="260" alt="Фото города">
+        </div>
         <div class="town__container">
           <div class="town__housing">
             <h3 class="town__title">Жилье</h3>
@@ -74,7 +76,7 @@
         <div class="color-card color-card--position">
           <h2 class="color-card__title">Там есть мост дьявола</h2>
           <p class="color-card__number">—№2—</p>
-          <p class="color-card__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          <p class="color-card__text color-card__desktop-text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
         </div>
         <div class="features__container">
           <img class="features__img" src="img/main/bridge.png" width="320" height="260" alt="Фото каньона">
