--- a/source/form.html
+++ b/source/form.html
@@ -41,7 +41,7 @@
         <section class="feedback">
           <div class="feedback__container">
             <div class="description">
-              <h2 class="description__title">Оставьте свой отзыв</h2>
+              <h2 class="description__form-title">Оставьте свой отзыв</h2>
               <p class="description__text">Помогите нашим отелям стать лучше!
                 Оставьте отзыв о них, а также о
                 посещенных вами
@@ -106,7 +106,7 @@
                 </ul>
               </div>
               <div class="form-feedback__attractions">
-                <h3 class="form-feedback__title">Посещаемые достопримечательности:</h3>
+                <h3 class="form-feedback__title form-feedback__title-attractions">Посещаемые достопримечательности:</h3>
                 <ul class="form-feedback__attractions-list">
                   <li class="form-feedback__attractions-item">
                     <label class="from-feedback__attractions-check" for="bridge">
@@ -135,12 +135,13 @@
                 </ul>
               </div>
               <div class="form-feedback__description">
-                <h3 class="form-feedback__title">Опишите свои эмоции:</h3>
+                <h3 class="form-feedback__title form-feedback__title-attractions">Опишите свои эмоции:</h3>
                 <div class="form-feedback__description-container">
                   <textarea class="form-feedback__description-text" name="text" cols="30" rows="10" placeholder="Опишите подробно все свои восторги"></textarea>
                 </div>
               </div>
               <button class="form-feedback__button" type="submit">Оставить отзыв</button>
+              <span class="form-feedback__addition">* — обязательные поля</span>
             </form>
           </div>
         </section>
