Стилизация блока intro desktop

--- a/source/form.html
+++ b/source/form.html
@@ -42,7 +42,7 @@
           <div class="feedback__container">
             <div class="description">
               <h2 class="description__form-title">Оставьте свой отзыв</h2>
-              <p class="description__text">Помогите нашим отелям стать лучше!
+              <p class="description__text description__form-text">Помогите нашим отелям стать лучше!
                 Оставьте отзыв о них, а также о
                 посещенных вами
                 достопримечательностях
