Адаптивная сетка для страницы формы - десктоп

--- a/source/form.html
+++ b/source/form.html
@@ -68,22 +68,24 @@
                 </div>
               </div>
               <div class="form-feedback__connection">
-                <h3 class="form-feedback__title">Контактная информация:</h3>
-                <div class="form-feedback__data-info">
-                  <label for="phone">Контактный телефон:
-                    <input type="tel" name="tel" id="phone" placeholder="Введите телефон">
-                    <div class="form-feedback__decoration-phone-container"></div>
-                  </label>
-                </div>
-                <div class="form-feedback__data-info">
-                  <label for="mail">Электронная почта:
-                    <input type="email" name="email" id="mail" placeholder="Введите e-mail">
-                  </label>
-                  <div class="form-feedback__decoration-mail-container"></div>
-                </div>
+                <h3 class="form-feedback__title form-feedback__title-connection">Контактная информация:</h3>
+                  <div class="form-feedback__container">
+                    <div class="form-feedback__data-info">
+                      <label for="phone">Контактный телефон:
+                        <input type="tel" name="tel" id="phone" placeholder="Введите телефон">
+                        <div class="form-feedback__decoration-phone-container"></div>
+                      </label>
+                    </div>
+                    <div class="form-feedback__data-info">
+                      <label for="mail">Электронная почта:
+                        <input type="email" name="email" id="mail" placeholder="Введите e-mail">
+                      </label>
+                      <div class="form-feedback__decoration-mail-container"></div>
+                    </div>
+                  </div>
               </div>
               <div class="form-feedback__impression">
-                <h3 class="form-feedback__title">Ваше общее впечатление:</h3>
+                <h3 class="form-feedback__title form-feedback__title-impression">Ваше общее впечатление:</h3>
                 <ul class="form-feedback__impression-list">
                   <li class="form-feedback__impression-item">
                     <label class="form-feedback__check" for="check-positive">
