Стилизация сетки страницы Фото и видео - планшет/мобильный

--- a/source/form.html
+++ b/source/form.html
@@ -41,8 +41,8 @@
         <section class="feedback">
           <div class="feedback__container">
             <div class="description">
-              <h2 class="description__form-title">Оставьте свой отзыв</h2>
-              <p class="description__text description__form-text">Помогите нашим отелям стать лучше!
+              <h2 class="description__general-title">Оставьте свой отзыв</h2>
+              <p class="description__text description__general-text">Помогите нашим отелям стать лучше!
                 Оставьте отзыв о них, а также о
                 посещенных вами
                 достопримечательностях
