Стилизация сетки Фото и видео - планшет

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -52,9 +52,13 @@
               <div class="media__img-container">
                 <img class="media__img" src="img/catalog/photo-1-mobile-catalog.jpg" width="280" height="280" alt="Народные просторы">
               </div>
-              <h3 class="media__title">Народные просторы</h3>
-              <p class="media__figcaption">Автор фото: Борис</p>
-              <span class="media__likes">1350</span>
+              <div class="media__caption-container">
+                <div class="media__caption-name">
+                  <h3 class="media__title">Народные просторы</h3>
+                  <p class="media__figcaption">Автор фото: Борис</p>
+                </div>
+                <span class="media__likes">1350</span>
+              </div>
             </div>
           </div>
           <div class="media__img-gallery">
@@ -63,9 +67,13 @@
                 <div class="media__img-container-small media__img-1">
                   <img class="media__img" src="img/catalog/photo-2-mobile-catalog.jpg" width="280" height="280" alt="Местная растительность">
                 </div>
-                <h3 class="media__title">Местная растительность</h3>
-                <p class="media__figcaption">Автор фото: Сергей</p>
-                <span class="media__likes">143</span>
+                <div class="media__caption-container">
+                  <div class="media__caption-name">
+                    <h3 class="media__title">Местная растительность</h3>
+                    <p class="media__figcaption">Автор фото: Сергей</p>
+                  </div>
+                  <span class="media__likes">143</span>
+                </div>
               </div>
             </div>
             <div class="media__photo">
@@ -73,9 +81,13 @@
                 <div class="media__img-container-small media__img-2">
                   <img class="media__img" src="img/catalog/photo-3-mobile-catalog.jpg" width="280" height="280" alt="Дорога на север">
                 </div>
-                <h3 class="media__title">Дорога на север</h3>
-                <p class="media__figcaption">Автор фото: Петр</p>
-                <span class="media__likes">96</span>
+                <div class="media__caption-container media__caption-color">
+                  <div class="media__caption-name">
+                    <h3 class="media__title">Дорога на север</h3>
+                    <p class="media__figcaption">Автор фото: Петр</p>
+                  </div>
+                  <span class="media__likes">96</span>
+                </div>
               </div>
             </div>
             <div class="media__photo">
@@ -83,9 +95,13 @@
                 <div class="media__img-container-small media__img-3">
                   <img class="media__img" src="img/catalog/photo-4-mobile-catalog.jpg" width="280" height="280" alt="Мост дьявола">
                 </div>
-                <h3 class="media__title">Мост дьявола</h3>
-                <p class="media__figcaption">Автор фото: Антон</p>
-                <span class="media__likes">1350</span>
+                <div class="media__caption-container">
+                  <div class="media__caption-name">
+                    <h3 class="media__title">Мост дьявола</h3>
+                    <p class="media__figcaption">Автор фото: Антон</p>
+                  </div>
+                  <span class="media__likes">1350</span>
+                </div>
               </div>
             </div>
           </div>
