--- a/source/catalog.html
+++ b/source/catalog.html
@@ -52,12 +52,17 @@
               <div class="media__img-container">
                 <img class="media__img" src="img/catalog/photo-1-mobile-catalog.jpg" width="280" height="280" alt="Народные просторы">
               </div>
-              <div class="media__caption-container">
+              <div class="media__caption-container media__caption-first">
                 <div class="media__caption-name">
                   <h3 class="media__title">Народные просторы</h3>
                   <p class="media__figcaption">Автор фото: Борис</p>
                 </div>
-                <span class="media__likes">1350</span>
+                <span class="media__likes media__likes-margin">1350</span>
+                <div class="media__like-container media__like-position">
+                  <svg class="media__like-icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+                  </svg>
+                </div>
               </div>
             </div>
           </div>
@@ -67,12 +72,17 @@
                 <div class="media__img-container-small media__img-1">
                   <img class="media__img" src="img/catalog/photo-2-mobile-catalog.jpg" width="280" height="280" alt="Местная растительность">
                 </div>
-                <div class="media__caption-container">
+                <div class="media__caption-container media__caption-second">
                   <div class="media__caption-name">
                     <h3 class="media__title">Местная растительность</h3>
                     <p class="media__figcaption">Автор фото: Сергей</p>
                   </div>
                   <span class="media__likes">143</span>
+                  <div class="media__like-container">
+                    <svg class="media__like-icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+                    </svg>
+                  </div>
                 </div>
               </div>
             </div>
@@ -81,12 +91,17 @@
                 <div class="media__img-container-small media__img-2">
                   <img class="media__img" src="img/catalog/photo-3-mobile-catalog.jpg" width="280" height="280" alt="Дорога на север">
                 </div>
-                <div class="media__caption-container media__caption-color">
+                <div class="media__caption-container media__caption-color media__caption-second">
                   <div class="media__caption-name">
                     <h3 class="media__title">Дорога на север</h3>
                     <p class="media__figcaption">Автор фото: Петр</p>
                   </div>
                   <span class="media__likes">96</span>
+                  <div class="media__like-container">
+                    <svg class="media__like-icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+                    </svg>
+                  </div>
                 </div>
               </div>
             </div>
@@ -95,12 +110,17 @@
                 <div class="media__img-container-small media__img-3">
                   <img class="media__img" src="img/catalog/photo-4-mobile-catalog.jpg" width="280" height="280" alt="Мост дьявола">
                 </div>
-                <div class="media__caption-container">
+                <div class="media__caption-container media__caption-second">
                   <div class="media__caption-name">
                     <h3 class="media__title">Мост дьявола</h3>
                     <p class="media__figcaption">Автор фото: Антон</p>
                   </div>
-                  <span class="media__likes">1350</span>
+                  <span class="media__likes">254</span>
+                  <div class="media__like-container">
+                    <svg class="media__like-icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+                    </svg>
+                  </div>
                 </div>
               </div>
             </div>
