стилизация главной страницы - планшет

--- a/source/index.html
+++ b/source/index.html
@@ -69,7 +69,7 @@
             </div>
             <div class="town__food">
               <h3 class="town__title">Еда</h3>
-              <p class="town__text town__text-mobile">Всегда заказывайте
+              <p class="town__text town__text-mobile town__text-tablet">Всегда заказывайте
               фирменный бургер, вы не
               разочаруетесь!</p>
             </div>
@@ -89,7 +89,7 @@
           <div class="features__block">
             <div class="features__block-container">
               <h2 class="features__title">Небольшая площадь</h2>
-              <p class="features__number">—№3—</p>
+              <p class="features__number features__number-tablet">—№3—</p>
               <p class="features__text features__text-width">Все интересные места находятся очень близко</p>
             </div>
           </div>
